Layout of MainActivity completed. Phone Verification Working.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Chatx</string>
+    <string name="welcome_message">Welcome to Chatx</string>
+    <string name="txt_phoneNumber">Enter Your Phone Number</string>
+    <string name="txt_send_code">Send Code</string>
+    <string name="txt_phone_number">phone number</string>
+    <string name="txt_enter_your_code">Enter Your Code</string>
+    <string name="txt_enter_code">enter code</string>
+    <string name="txt_verify_code">Verify Code</string>
 </resources>
